--- a/music-server/package.json
+++ b/music-server/package.json
@@ -13,12 +13,14 @@
     "element-plus": "^2.2.29",
     "less": "^4.1.3",
     "node": "^19.6.0",
+    "process": "^0.11.10",
     "sass": "^1.58.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@types/node": "^18.13.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "unplugin-auto-import": "^0.14.2",
     "unplugin-vue-components": "^0.23.0",
