--- a/Music/src/main/resources/application.properties
+++ b/Music/src/main/resources/application.properties
@@ -10,3 +10,7 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 logging.level.com.exam=debug
 logging.file.path=./logs/
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+
