--- a/Music/pom.xml
+++ b/Music/pom.xml
@@ -72,6 +72,11 @@
       <version>2.1.4</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-aop</artifactId>
+    </dependency>
+
 
     <!--这里面有点小工具啥的-->
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
