--- a/Music/src/main/resources/application.properties
+++ b/Music/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
 
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.timeout=1800000
+spring.redis.lettuce.pool.max-active=20
+spring.redis.lettuce.pool.max-wait=-1
+
